<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/img_login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/et_login_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_login_logo"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="32dp"
        android:hint="ID"
        android:inputType="textAutoComplete" />

    <EditText
        android:hint="PW"
        android:inputType="textPassword"
        android:id="@+id/et_login_pw"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_below="@id/et_login_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bt_login"
        android:textColor="@color/white"
        android:text="@string/login_login"
        android:background="@drawable/shape_btn"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="32dp"
        android:layout_below="@id/et_login_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_below="@id/bt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_login_sign_up"
        android:text="@string/login_signup"/>
</RelativeLayout>